--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,13 @@ hs_err_pid*
 # VS Code
 .vscode/
 
+# maven
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
