--- a/lab-notification/src/main/resources/application-dev.properties
+++ b/lab-notification/src/main/resources/application-dev.properties
@@ -4,10 +4,11 @@ server.servlet.context-path=/lab-notification
 spring.application.name=lab-notification
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/lab?useSSL=false&characterEncoding=UTF8
-spring.datasource.username=sysadmin
-spring.datasource.password=secadmin
+spring.datasource.username=root
+spring.datasource.password=123qwe!
 logging.file.path=/Users/hyeonkyun/Desktop/lab/logs
 
 service.mode=dev
 provider.url=http://localhost:4000/lab-notification-provider/fcm/transmit/token
 callback.url=http://localhost:9090/lab-notification/callback/provider
+
